--- a/index.html
+++ b/index.html
@@ -25,33 +25,38 @@
       </div>
 
       <div class="teclado">
-        <img src="image/ON.png" alt="On" class="tecla" id="on"/>
-        <img src="image/sign.png" alt="signo" class="tecla" id="sign"/>
-        <img src="image/raiz.png" alt="raiz" class="tecla" id="raiz"/>
-        <img src="image/dividido.png" alt="dividido" class="tecla divide" id="dividido"/>
 
-        <img src="image/7.png" alt="7" class="tecla" id="7"/>
-        <img src="image/8.png" alt="8" class="tecla" id="8"/>
-        <img src="image/9.png" alt="9" class="tecla" id="9"/>
-        <img src="image/por.png" alt="por" class="tecla multiplica" id="por"/>
+        <div class="tecla"><img src="image/ON.png" alt="On" class="imgTecla" id="on" /></div>
+        <div class="tecla"><img src="image/sign.png" alt="signo" class="imgTecla" id="sign"/></div>
+        <div class="tecla"><img src="image/raiz.png" alt="raiz" class="imgTecla" id="raiz"/></div>
+        <div class="tecla"><img src="image/dividido.png" alt="dividido" class="imgTecla divide" id="dividido"/></div>
 
-        <img src="image/4.png" alt="4" class="tecla" id="4"/>
-        <img src="image/5.png" alt="5" class="tecla" id="5"/>
-        <img src="image/6.png" alt="6" class="tecla" id="6"/>
-        <img src="image/menos.png" alt="menos" class="tecla resta" id="menos"/>
+        <div class="tecla"><img src="image/7.png" alt="7" class="imgTecla" id="7"/></div>
+        <div class="tecla"><img src="image/8.png" alt="8" class="imgTecla" id="8"/></div>
+        <div class="tecla"><img src="image/9.png" alt="9" class="imgTecla" id="9"/></div>
+        <div class="tecla"><img src="image/por.png" alt="por" class="imgTecla multiplica" id="por"/></div>
+
+        <div class="tecla"><img src="image/4.png" alt="4" class="imgTecla" id="4"/></div>
+        <div class="tecla"><img src="image/5.png" alt="5" class="imgTecla" id="5"/></div>
+        <div class="tecla"><img src="image/6.png" alt="6" class="imgTecla" id="6"/></div>
+        <div class="tecla"><img src="image/menos.png" alt="menos" class="imgTecla resta" id="menos"/></div>
 
         <div class="row">
-          <div class="col1">
-            <img src="image/1.png" alt="1" class="tecla" id="1"/>
-            <img src="image/2.png" alt="2" class="tecla" id="2"/>
-            <img src="image/3.png" alt="3" class="tecla" id="3"/>
 
-            <img src="image/0.png" alt="0" class="tecla" id="0"/>
-            <img src="image/punto.png" alt="punto" class="tecla" id="punto"/>
-            <img src="image/igual.png" alt="igual" class="tecla" id="igual"/>
+          <div class="col1">
+
+            <div class="class="teclaIn""><img src="image/1.png" alt="1" class="imgTecla" id="uno"/></div>
+            <div class="class="tecla""><img src="image/2.png" alt="2" class="imgTecla" id="dos"/></div>
+            <div class="class="tecla""><img src="image/3.png" alt="3" class="imgTecla" id="tres"/></div>
+
+            <div class="class="tecla""><img src="image/0.png" alt="0" class="imgTecla" id="cero"/></div>
+            <div class="class="tecla""><img src="image/punto.png" alt="punto" class="imgTecla" id="punto"/></div>
+            <div class="class="tecla""><img src="image/igual.png" alt="igual" class="imgTecla" id="igual"/></div>
+
           </div>
+
           <div class="col2">
-            <img src="image/mas.png" alt="mas" class="tecla suma" id="mas"/>
+            <div class="class="tecla suma"" id="teclaMas"><img src="image/mas.png" alt="mas" class="tecla suma" id="mas"/></div>
           </div>
 
         </div>
@@ -62,6 +67,7 @@
 
     <div class="container-libreta">
       <div class="libreta">
+
         <div class="contenido-ingresos">
           <h3>Ingresos</h3>
           <ul>
@@ -69,6 +75,7 @@
             <li><span>Bonificación: </span>$200.00</li>
           </ul>
         </div>
+
         <div class="contenido-egresos">
           <h3>Egresos</h3>
           <ul>
