--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
           <div class="col1">
 
-            <div class="class="teclaIn""><img src="image/1.png" alt="1" class="imgTecla" id="uno"/></div>
-            <div class="class="tecla""><img src="image/2.png" alt="2" class="imgTecla" id="dos"/></div>
-            <div class="class="tecla""><img src="image/3.png" alt="3" class="imgTecla" id="tres"/></div>
+            <div class="tecla"><img src="image/1.png" alt="1" class="imgTecla" id="uno"/></div>
+            <div class="tecla"><img src="image/2.png" alt="2" class="imgTecla" id="dos"/></div>
+            <div class="tecla"><img src="image/3.png" alt="3" class="imgTecla" id="tres"/></div>
 
-            <div class="class="tecla""><img src="image/0.png" alt="0" class="imgTecla" id="cero"/></div>
-            <div class="class="tecla""><img src="image/punto.png" alt="punto" class="imgTecla" id="punto"/></div>
-            <div class="class="tecla""><img src="image/igual.png" alt="igual" class="imgTecla" id="igual"/></div>
+            <div class="tecla"><img src="image/0.png" alt="0" class="imgTecla" id="cero"/></div>
+            <div class="tecla"><img src="image/punto.png" alt="punto" class="imgTecla" id="punto"/></div>
+            <div class="tecla"><img src="image/igual.png" alt="igual" class="imgTecla" id="igual"/></div>
 
           </div>
 
           <div class="col2">
-            <div class="class="tecla suma"" id="teclaMas"><img src="image/mas.png" alt="mas" class="tecla suma" id="mas"/></div>
+            <div class="tecla suma" id="teclaMas"><img src="image/mas.png" alt="mas" class="tecla suma" id="mas"/></div>
           </div>
 
         </div>
